--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=3030
 SWAGGER=false
 MONGO_URI="mongodb+srv://Gregorio:mm8yQTWdBMnM0KRf@database-0.vgtwg.mongodb.net/"
+CORS_ALLOWED_ORIGINS="http://localhost:5500,http://localhost:5173"
