--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 PORT=3030
 SWAGGER=false
-MONGO_URI="mongodb+srv://Gregorio:mm8yQTWdBMnM0KRf@database-0.vgtwg.mongodb.net/"
-CORS_ALLOWED_ORIGINS="http://localhost:5500,http://localhost:5173"
+CORS_ALLOWED_ORIGINS="http://localhost:3000"
+JWT_SECRET="bXktc2VjcmV0LWp3dC10b2tlbi1mYWN1bmRvLW1hcnRpbmV6LXZpZGFsCg=="
+MONGO_URI="mongodb+srv://Gregorio:hoCpklsa9nwHS0tR@database-0.vgtwg.mongodb.net/FindYourGuide?retryWrites=true&w=majority&appName=Database-0"
+ENVIRONMENT="DEV"
