--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "devDependencies": {
     "@eslint/js": "^9.0.0",
     "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.7",
     "@types/socket.io": "^3.0.2",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.57.0",
@@ -28,15 +30,17 @@
     "typescript-eslint": "^7.7.0"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.3.2",
+    "mongoose": "^8.4.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.5",
-    "uuid": "^9.0.1"
+    "uuid": "^10.0.0"
   }
 }
